Use new mechanism to disable plugin
Plugins are enabled by default, so the '.example' config has been renamed to be in line with the other plugins

Updated readme

--- a/plugins/body-decompress-after.conf
+++ b/plugins/body-decompress-after.conf
@@ -7,6 +7,12 @@
 # Please see the enclosed LICENSE file for full details.
 # ------------------------------------------------------------------------
 
+# OWASP CRS Plugin
+# Plugin name: body-decompress-plugin
+# Plugin description: On-the-fly decompression of RESPONSE_BODY
+# Rule ID block base: 9,503,000 - 9,503,999
+# Plugin version: 1.0.0
+
 # Directive SecRuleUpdateTargetById, unfortunately, doesn't support 'OFFSET'
 # like SecRuleUpdateActionById, so affected rules are commented out - keeping it
 # here just to see what is NOT handled by this plugin.
