--- a/plugins/body-decompress-before.conf
+++ b/plugins/body-decompress-before.conf
@@ -7,6 +7,16 @@
 # Please see the enclosed LICENSE file for full details.
 # ------------------------------------------------------------------------
 
+# OWASP CRS Plugin
+# Plugin name: body-decompress-plugin
+# Plugin description: On-the-fly decompression of RESPONSE_BODY
+# Rule ID block base: 9,503,000 - 9,503,999
+# Plugin version: 1.0.0
+
+# Generic rule to disable plugin
+SecRule TX:body-decompress-plugin_enabled "@eq 0" "id:9503099,phase:1,pass,nolog,ctl:ruleRemoveById=9503100-9503999"
+
+
 # This rule checks if RESPONSE_BODY is compressed using gzip:
 # - Content-Encoding header must contain any of gzip, compress, deflate
 # - RESPONSE_BODY must begin with gzip magic number
