Adding SecRuleUpdateTargetById for 951 rules

--- a/plugins/body-decompress-after.conf
+++ b/plugins/body-decompress-after.conf
@@ -13,30 +13,26 @@
 # Rule ID block base: 9,503,000 - 9,503,999
 # Plugin version: 1.0.0
 
-# Directive SecRuleUpdateTargetById, unfortunately, doesn't support 'OFFSET'
-# like SecRuleUpdateActionById, so affected rules are commented out - keeping it
-# here just to see what is NOT handled by this plugin.
-
 SecRuleUpdateTargetById 950130 TX:RESPONSE_BODY_DECOMPRESSED
 SecRuleUpdateTargetById 950140 TX:RESPONSE_BODY_DECOMPRESSED
 
 SecRuleUpdateTargetById 951100 TX:RESPONSE_BODY_DECOMPRESSED
-#SecRuleUpdateTargetById 951110:1 TX:RESPONSE_BODY_DECOMPRESSED
-#SecRuleUpdateTargetById 951120:1 TX:RESPONSE_BODY_DECOMPRESSED
-#SecRuleUpdateTargetById 951130:1 TX:RESPONSE_BODY_DECOMPRESSED
-#SecRuleUpdateTargetById 951140:1 TX:RESPONSE_BODY_DECOMPRESSED
-#SecRuleUpdateTargetById 951150:1 TX:RESPONSE_BODY_DECOMPRESSED
-#SecRuleUpdateTargetById 951160:1 TX:RESPONSE_BODY_DECOMPRESSED
-#SecRuleUpdateTargetById 951170:1 TX:RESPONSE_BODY_DECOMPRESSED
-#SecRuleUpdateTargetById 951180:1 TX:RESPONSE_BODY_DECOMPRESSED
-#SecRuleUpdateTargetById 951190:1 TX:RESPONSE_BODY_DECOMPRESSED
-#SecRuleUpdateTargetById 951200:1 TX:RESPONSE_BODY_DECOMPRESSED
-#SecRuleUpdateTargetById 951210:1 TX:RESPONSE_BODY_DECOMPRESSED
-#SecRuleUpdateTargetById 951220:1 TX:RESPONSE_BODY_DECOMPRESSED
-#SecRuleUpdateTargetById 951230:1 TX:RESPONSE_BODY_DECOMPRESSED
-#SecRuleUpdateTargetById 951240:1 TX:RESPONSE_BODY_DECOMPRESSED
-#SecRuleUpdateTargetById 951250:1 TX:RESPONSE_BODY_DECOMPRESSED
-#SecRuleUpdateTargetById 951260:1 TX:RESPONSE_BODY_DECOMPRESSED
+SecRuleUpdateTargetById 951110 TX:RESPONSE_BODY_DECOMPRESSED
+SecRuleUpdateTargetById 951120 TX:RESPONSE_BODY_DECOMPRESSED
+SecRuleUpdateTargetById 951130 TX:RESPONSE_BODY_DECOMPRESSED
+SecRuleUpdateTargetById 951140 TX:RESPONSE_BODY_DECOMPRESSED
+SecRuleUpdateTargetById 951150 TX:RESPONSE_BODY_DECOMPRESSED
+SecRuleUpdateTargetById 951160 TX:RESPONSE_BODY_DECOMPRESSED
+SecRuleUpdateTargetById 951170 TX:RESPONSE_BODY_DECOMPRESSED
+SecRuleUpdateTargetById 951180 TX:RESPONSE_BODY_DECOMPRESSED
+SecRuleUpdateTargetById 951190 TX:RESPONSE_BODY_DECOMPRESSED
+SecRuleUpdateTargetById 951200 TX:RESPONSE_BODY_DECOMPRESSED
+SecRuleUpdateTargetById 951210 TX:RESPONSE_BODY_DECOMPRESSED
+SecRuleUpdateTargetById 951220 TX:RESPONSE_BODY_DECOMPRESSED
+SecRuleUpdateTargetById 951230 TX:RESPONSE_BODY_DECOMPRESSED
+SecRuleUpdateTargetById 951240 TX:RESPONSE_BODY_DECOMPRESSED
+SecRuleUpdateTargetById 951250 TX:RESPONSE_BODY_DECOMPRESSED
+SecRuleUpdateTargetById 951260 TX:RESPONSE_BODY_DECOMPRESSED
 
 SecRuleUpdateTargetById 952100 TX:RESPONSE_BODY_DECOMPRESSED
 SecRuleUpdateTargetById 952110 TX:RESPONSE_BODY_DECOMPRESSED
@@ -48,6 +44,9 @@ SecRuleUpdateTargetById 953120 TX:RESPONSE_BODY_DECOMPRESSED
 SecRuleUpdateTargetById 954100 TX:RESPONSE_BODY_DECOMPRESSED
 SecRuleUpdateTargetById 954110 TX:RESPONSE_BODY_DECOMPRESSED
 SecRuleUpdateTargetById 954120 TX:RESPONSE_BODY_DECOMPRESSED
+# Directive SecRuleUpdateTargetById, unfortunately, doesn't support 'OFFSET'
+# like SecRuleUpdateActionById, so affected rules are commented out - keeping it
+# here just to see what is NOT handled by this plugin.
 #SecRuleUpdateTargetById 954130:1 TX:RESPONSE_BODY_DECOMPRESSED
 
 SecRuleUpdateTargetById 955100 TX:RESPONSE_BODY_DECOMPRESSED
