--- a/tests/regression/body-decompress-plugin/9503110.yaml
+++ b/tests/regression/body-decompress-plugin/9503110.yaml
@@ -21,6 +21,6 @@ tests:
             method: "POST"
             version: "HTTP/1.1"
             uri: "/reflect"
-            data: "{\"body\": \"\\x1f\\x8b\\x08\\x00\\x00\\x00\\x00\\x00\\x00\\x03\\xb3\\xb1/\\xc8(P\\x00\\x00\\x18*\\xa1\\xd8\\x06\\x00\\x00\\x00"}"
+            data: "{\"body\": \"\\x1f\\x8b\\x08\\x00\\x00\\x00\\x00\\x00\\x00\\x03\\xb3\\xb1/\\xc8(P\\x00\\x00\\x18*\\xa1\\xd8\\x06\\x00\\x00\\x00\"}"
           output:
             log_contains: id "953120"
