--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -5,3 +5,5 @@ name: Integration tests
 jobs:
   integration-tests:
     uses: coreruleset/crs-plugin-test-action/.github/workflows/integration.yaml@main  # yamllint disable-line rule:line-length
+    with:
+      backends: '["apache"]'
