Let's try this.

--- a/tests/regression/body-decompress-plugin/9503110.yaml
+++ b/tests/regression/body-decompress-plugin/9503110.yaml
@@ -23,7 +23,7 @@ tests:
             data: |
               {
                 "encodedBody": "H4sIAJepXGYAA7OxL8goUAAAGCqh2AYAAAA=",
-                "headers": {"Content-Encoding": "gzip"}
+                "headers": {"Content-Encoding": "gzip", "Content-Length": "26"}
               }
           output:
             log_contains: id "953120"
