--- a/plugins/body-decompress-after.conf
+++ b/plugins/body-decompress-after.conf
@@ -38,6 +38,8 @@ SecRuleUpdateTargetById 952100 TX:RESPONSE_BODY_DECOMPRESSED
 SecRuleUpdateTargetById 952110 TX:RESPONSE_BODY_DECOMPRESSED
 
 SecRuleUpdateTargetById 953100 TX:RESPONSE_BODY_DECOMPRESSED
+# CRS4
+SecRuleUpdateTargetById 953101 TX:RESPONSE_BODY_DECOMPRESSED
 SecRuleUpdateTargetById 953110 TX:RESPONSE_BODY_DECOMPRESSED
 SecRuleUpdateTargetById 953120 TX:RESPONSE_BODY_DECOMPRESSED
 
